# testris_the_fun_way

./: .clang-tidy  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md  meson.build  pyproject.toml  tox.ini
.github/workflows/: test.yaml
editor/: pyproject.toml
editor/src/FunEngine-editor/: __main__.py
editor/src/clockwork_reverie_editor/: __main__.py  __version__.py
editor/src/fun-engine-editor/: __main__.py  __version__.py
editor/src/fun-engine-editor/.project/: main.toml
include/: constants.hpp  module.modulemap
include/internation_system_units/: internation_system_units.hpp  time.hpp
include/math/vectors/: vector.hpp
python_module/: main_python.cpp  module.cpp
sample_projects/webgl_triangle/: index.html
sample_projects/webgl_triangle/src/: main.js  py-worker.js  webworker.js
sample_projects/webgl_triangle/src/webgl_triangle/: __main__.py
src/: engine_object.cpp  fun_engine.ixx  funengine.cpp  main.ixx  utils.ixx
src/game_objects/: game_object.cpp  game_object.ixx  game_object3d.cpp  game_object3d.ixx
src/graphics/: graphical_device.ixx  graphics.cpp  graphics.ixx  mesh.ixx  window.ixx
src/internation_system_units/: internation_system_units.cpp  time.cpp
src/international_system_units/: internation_system_units.cpp  time.cpp
src/math/: coordinates.ixx  math.cpp  math.ixx  matrix.ixx  points.ixx  utils.cpp  utils.ixx  vectors.cpp  vectors.ixx
src/math/coordinates/: cartesian.ixx  points.ixx  vectors.ixx
src/math/geometry/: basic_shapes.ixx  geometry.ixx
src/math/matrices/: matrix.cpp  matrix.ixx  matrix2x2.ixx  matrix3x3.ixx  matrix4x4.cpp  matrix4x4.ixx
src/math/vectors/: vector.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/measurement_units/: measurement_units.ixx  time.ixx
src/python_module/: main.cpp  vectors.ixx
src/scenes/: scene_manager.hpp
src/sdl3_backend/: graphics.ixx
tests/math/: test_utils.py  test_vectors.py
tests/math/test_vectors/: test_vector2.py
typings/FunEnginePy/: __init__.pyi  math.pyi
